[package]
name = "whitelist-claim"
version = "1.0.0"
authors = ["Jakub <jakub@moonbite.space>"]
repository = "https://github.com/Phoenix-Protocol-Group/whitelist-claim"
edition = "2021"
license = "GPL-3.0"

[lib]
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "22.0.4"

[dev-dependencies]
soroban-sdk = { version = "22.0.4", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
